--- a/simulator/index.html
+++ b/simulator/index.html
@@ -13,6 +13,8 @@
   <h1>Processing in the background ...</h1>
 
   <script src="libs/jquery/jquery-3.3.1.min.js"></script>
+
+  <script src="config.js"></script>
   <script src="js/simulator.js"></script>
 </body>
 </html>
