--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,8 @@
 <div id="map"></div>
 
 <script src="libs/jquery/jquery-3.3.1.min.js"></script>
+<script src="libs/fontawesome/v5.0.6/js/fontawesome.min.js"></script>
+<script src="libs/fontawesome/v5.0.6/js/fa-solid.min.js"></script>
 <script src="libs/leaflet/v1.3.1/leaflet.js"></script>
 
 <!--
