--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link rel="stylesheet" href="libs/leaflet/v1.3.1/leaflet.css">
+    <link rel="stylesheet" href="libs/leaflet.easybutton/v2.3.0/easy-button.css">
+
     <link rel="manifest" href="manifest.json">
     <meta name="msapplication-TileColor" content="#b70e0c">
     <meta name="theme-color" content="#b70e0c">
@@ -34,9 +36,12 @@
 <div id="map"></div>
 
 <script src="libs/jquery/jquery-3.3.1.min.js"></script>
+
 <script src="libs/fontawesome/v5.0.6/js/fontawesome.min.js"></script>
 <script src="libs/fontawesome/v5.0.6/js/fa-solid.min.js"></script>
+
 <script src="libs/leaflet/v1.3.1/leaflet.js"></script>
+<script src="libs/leaflet.easybutton/v2.3.0/easy-button.js"></script>
 
 <!--
   For the file structure of config.js, see config_template.js.
