add QR code (closes #8)

--- a/manager/urls.html
+++ b/manager/urls.html
@@ -9,6 +9,10 @@
 <head>
   <title>GeoBroker URLs</title>
   <style>
+    .qr {
+      margin: 1cm;
+      display: block;
+    }
     @media print {
       .noprint {
         display: none;
