--- a/manager/index.html
+++ b/manager/index.html
@@ -14,7 +14,54 @@
 
   <p>Print unit URLs <a href="urls.html">here</a>.<p>
 
-  <script src="libs/knockout/v3.2.4/knockout.js"></script>
+  <h1>Units</h1>
+  <form data-bind="submit: addUnit">
+    <textarea
+      placeholder="one unit name per line"
+      data-bind="value: newUnitName"
+    ></textarea><button type="submit">Add</button>
+  </form>
+  <table>
+    <thead><tr>
+      <th>Id</th>
+      <th>Name</th>
+      <th>Token
+        <a href="#" data-bind="click: randomAll">Random all</a>
+      </th>
+      <th>Units</th>
+      <th>Incidents</th>
+      <th>Actions
+        <a href="#" data-bind="click: postAll">Save all</a>
+      </th>
+    </tr></thead>
+    <tbody data-bind="foreach: configuredUnits"><tr>
+      <td data-bind="text: id"></td>
+      <td><input data-bind="value: name" /></td>
+      <td>
+        <input data-bind="value: token"/>
+        <a href="#" data-bind="click: random">Random</a>
+      </td>
+      <td><select multiple="multiple" data-bind="
+        options: $root.configuredUnits,
+        optionsText: function (item) {
+          return item.name();
+        },
+        optionsValue: function (item) {
+          return item.id;
+        },
+        selectedOptions: units,
+      "></td>
+      <td data-bind="text: incidents">not yet available</td>
+      <td>
+        <a href="#" data-bind="click: post">Save</a>
+        <a href="#" data-bind="click: $parent.removeUnit">Delete</a>
+      </td>
+    </tr></tbody>
+  </table>
+
+  <script src="libs/jquery/jquery-3.3.1.min.js"></script>
+  <script src="libs/knockout/v3.4.2/knockout.js"></script>
+  <script src="libs/knockout/v3.4.2/knockout.mapping-2.4.1.js"></script>
 
   <script src="config.js"></script>
   <script src="js/manager.js"></script>
