title, headings, page navigation

--- a/manager/index.html
+++ b/manager/index.html
@@ -7,11 +7,12 @@
 
 <html>
 <head>
-  <title>GeoBroker manager</title>
+  <title>GeoBroker manager - units</title>
 </head>
 <body>
   <p>The main design goals for this module are simple code and less effort - data errors are <em>not</em> handled in general!</p>
 
+  <p>Manage incidents <a href="incidents.html">here</a>.<p>
   <p>Print unit URLs <a href="urls.html">here</a>.<p>
 
   <h1>Units</h1>
