--- a/manager/urls.html
+++ b/manager/urls.html
@@ -7,7 +7,7 @@
 
 <html>
 <head>
-  <title>GeoBroker URLs</title>
+  <title>GeoBroker manager - URLs</title>
   <style>
     .qr {
       margin: 1cm;
@@ -36,8 +36,10 @@
 <body>
   <p class="noprint">
     When printing, every unit's info comes on a separate page.
-    (This paragraph is not printed.) <a href=".">Go back</a>.
+    (This header is not printed.).
   <p>
+  <p class="noprint">Manage units <a href="index.html">here</a>.<p>
+  <p class="noprint">Manage incidents <a href="incidents.html">here</a>.<p>
 
   <script src="libs/jquery/jquery-3.3.1.min.js"></script>
   <script src="libs/qrcodejs/qrcode.js"></script>
