--- a/manager/incidents.html
+++ b/manager/incidents.html
@@ -34,7 +34,7 @@
         <a href="#" data-bind="click: postAll">Save all</a>
       </th>
     </tr></thead>
-    <tbody data-bind="foreach: configuredUnits"><tr>
+    <tbody data-bind="foreach: configuredIncidents"><tr>
       <td data-bind="text: id"></td>
       <td><input data-bind="value: type" /></td>
       <td><input data-bind="value: info" /></td>
