--- a/manager/index.html
+++ b/manager/index.html
@@ -52,7 +52,16 @@
         },
         selectedOptions: units,
       "></td>
-      <td data-bind="text: incidents">not yet available</td>
+      <td><select multiple="multiple" data-bind="
+        options: $root.configuredIncidents,
+        optionsText: function (item) {
+          return item.type() + ': ' + item.info();
+        },
+        optionsValue: function (item) {
+          return item.id;
+        },
+        selectedOptions: incidents,
+      "></td>
       <td>
         <a href="#" data-bind="click: post">Save</a>
         <a href="#" data-bind="click: $parent.removeUnit">Delete</a>
@@ -65,6 +74,6 @@
   <script src="libs/knockout/v3.4.2/knockout.mapping-2.4.1.js"></script>
 
   <script src="config.js"></script>
-  <script src="js/manager.js"></script>
+  <script src="js/units.js"></script>
 </body>
 </html>
