display incidents from scope, closes #3

--- a/client/index.html
+++ b/client/index.html
@@ -42,6 +42,8 @@
 
 <script src="libs/leaflet/v1.3.1/leaflet.js"></script>
 <script src="libs/leaflet.easybutton/v2.3.0/easy-button.js"></script>
+<script src="libs/leaflet-svgicon/svg-icon.js"></script>
+<script src="libs/leaflet-svgicon/subclasses/rhombus-icon.js"></script>
 
 <!--
   For the file structure of config.js, see config_template.js.
