--- a/manager/index.html
+++ b/manager/index.html
@@ -13,6 +13,7 @@
   <p>The main design goals for this module are simple code and less effort - data errors are <em>not</em> handled in general!</p>
 
   <p>Manage incidents <a href="incidents.html">here</a>.<p>
+  <p>Manage POIs <a href="pois.html">here</a>.<p>
   <p>Print unit URLs <a href="urls.html">here</a>.<p>
 
   <h1>Units</h1>
