--- a/manager/urls.html
+++ b/manager/urls.html
@@ -54,6 +54,7 @@
   <p class="noprint">Manage units <a href="index.html">here</a>.<p>
   <p class="noprint">Manage incidents <a href="incidents.html">here</a>.<p>
   <p class="noprint">Manage POIs <a href="pois.html">here</a>.<p>
+  <p class="noprint">Edit POIs in Coceso JSON format <a href="json.html">here</a>.<p>
 
   <script src="libs/jquery/jquery-3.3.1.min.js"></script>
   <script src="libs/qrcodejs/qrcode.js"></script>
