--- a/manager/index.html
+++ b/manager/index.html
@@ -14,6 +14,7 @@
 
   <p>Manage incidents <a href="incidents.html">here</a>.<p>
   <p>Manage POIs <a href="pois.html">here</a>.<p>
+  <p>Edit POIs in Coceso JSON format <a href="json.html">here</a>.<p>
   <p>Print unit URLs <a href="urls.html">here</a>.<p>
 
   <h1>Units</h1>
