fixed copy&waste (cannot delete POI)

--- a/manager/pois.html
+++ b/manager/pois.html
@@ -46,7 +46,7 @@
       </td>
       <td>
         <a href="#" data-bind="click: post">Save</a>
-        <a href="#" data-bind="click: $parent.removeIncident">Delete</a>
+        <a href="#" data-bind="click: $parent.removePoi">Delete</a>
       </td>
     </tr></tbody>
   </table>
