--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,14 @@
             height: 100%;
             width: 100vw;
         }
+
+        .state-green {
+            color: green;
+        }
+
+        .state-red {
+            color: red;
+        }
     </style>
 </head>
 <body>
