fixed syntax and white-space

--- a/client/index.html
+++ b/client/index.html
@@ -11,14 +11,14 @@
 
     <title>GeoBroker Live Map</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
-    <link rel="stylesheet" href="libs/leaflet/v1.3.1/leaflet.css">
-    <link rel="stylesheet" href="libs/leaflet.easybutton/v2.3.0/easy-button.css">
+    <link rel="stylesheet" href="libs/leaflet/v1.3.1/leaflet.css"/>
+    <link rel="stylesheet" href="libs/leaflet.easybutton/v2.3.0/easy-button.css"/>
 
-    <link rel="manifest" href="manifest.json">
-    <meta name="msapplication-TileColor" content="#b70e0c">
-    <meta name="theme-color" content="#b70e0c">
+    <link rel="manifest" href="manifest.json"/>
+    <meta name="msapplication-TileColor" content="#b70e0c"/>
+    <meta name="theme-color" content="#b70e0c"/>
 
     <style>
         body {
