--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="libs/leaflet/v1.3.1/leaflet.css"/>
     <link rel="stylesheet" href="libs/leaflet.easybutton/v2.3.0/easy-button.css"/>
+    <link rel="stylesheet" href="libs/Leaflet.Dialog/v1.0.4/Leaflet.Dialog.css"/>
 
     <link rel="manifest" href="manifest.json"/>
     <meta name="msapplication-TileColor" content="#b70e0c"/>
@@ -42,6 +43,24 @@
 </head>
 <body>
 <div id="map"></div>
+<div style="display: none;"><div id="help">
+<h1>Erläuterungen</h1>
+<h2>Kartenausschnitt</h2>
+<p>Der Kartenausschnitt kann durch Ziehen verschoben werden. Standardmäßig folgt der Kartenausschnitt der eigenen Position, das wird jedoch durch verschieben des Ausschnitts deaktiviert.</p>
+<p>Die Genauigkeit der Karte (Zoom) kann entweder über die Tasten Plus und Minus, Strg+Mausrad, oder auf Touch-Geräten auch durch auseinander- oder zusammenbewegen zweier Finger verändert werden.</p>
+<h2>Funktionen</h2>
+<p><i class="fa fa-map-marker"></i>/<i class="fa fa-crosshairs"></i> aktiviert oder deaktiviert den automatischen Kartenausschnitt. Klicke auf <i class="fa fa-crosshairs"></i> um zu deiner Position zu schwenken.</p>
+<p><i class="fa fa-plug"></i>/<i class="fa fa-globe"></i> zeigen den Status der Datenverbindung zum Server bzw. der Positionsbestimmung in deinem Browser an. Grün bedeutet gut; wenn ein Status rot ist, kannst du die Seite neu laden indem du darauf klickst oder tippst.</p>
+<p><i class="fa fa-question"></i> frag-würdige Lektüre für einsame Stunden.</p>
+<p><img src="libs/leaflet/v1.3.1/images/layers.png"></img> blendet Karteninhalte ein oder aus. Die einzelnen Layer werden eingeblendet, wenn du mit der Maus über diese Funktion fährst oder darauf tippst.</p>
+<h2>Karteninhalte</h2>
+<p><img src="libs/leaflet/v1.3.1/images/marker-icon.png"></img> zeigt die am Browser ermittelte, eigene Position an. Der umgebende Kreis beschreibt die Genauigkeit der Positionsbestimmung. Wenn die Datenkommunikation mit dem Server aktiv ist, sollte auch der die eigene Einheit an dieser Stelle angezeigt werden.</p>
+<p><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath d='M8 0h8v8h8v8h-8v8h-8v-8h-8v-8h8z' fill='red' stroke='red'/%3E%3C/svg%3E"></img> Versorgungsstandort oder Bereitstellungsraum<p>
+<p><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14'%3E%3Cpath d='M1 1h12v12h-12z' fill='grey' stroke='white' stroke-width='2'/%3E%3C/svg%3E"></img> ein Auftrag, <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14'%3E%3Cpath d='M1 1h12v12h-12z' fill='blue' stroke='white' stroke-width='2'/%3E%3C/svg%3E"></img> ein Einsatz; wenn der Rahmen rot statt weiß ist, ist eine unverzügliche Informationsweitergabe erforderlich, z.B. Verzögerung bei der Anfahrt, Lagemeldung bei Eintraffen.<p>
+<p><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='2' stroke='black'/%3E%3C/svg%3E"></img> eine Einheit. Wenn du die Maus darüberhältst oder drauf tippst, werden weitere Details eingeblendet: eine grüne Linie führt zur nächsten zugewiesenen Position, eine graue Linie zur letzten bestätigten Position (beide Linien sind nur dann sichtbar, wenn es die bezeichnete Position gibt und sie sich von der Live-Position der Einheit unterscheidet).<p>
+<p>Generell siehst du nur Einheiten und Einsätze, die zu dem selben Einsatz alarmiert sind, wie ihr. Führungskräfte sehen alle Einheiten: <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='yellow' stroke-width='2' stroke='black'/%3E%3C/svg%3E"></img> die eigene Einheit, <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='crimson' stroke-width='2' stroke='black'/%3E%3C/svg%3E"></img> Notarzt, <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='coral' stroke-width='2' stroke='black'/%3E%3C/svg%3E"></img> RTW, <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='2' stroke='black'/%3E%3C/svg%3E"></img> SEW, <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='fuchsia' stroke-width='2' stroke='black'/%3E%3C/svg%3E"></img> Führungskraft; die Farben verblassen, wenn keine aktuellen Positionsdaten verfügbar sind.<p>
+<p><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke='red' stroke-width='4'/%3E%3Cpath d='M11 4h3L12 5z M11 20h3L12 19z' fill='black' stroke='black'/%3E%3Ctext x='5' y='14' font-family='Verdana' font-size='6'%3E2,2m%3C/text%3E%3C/svg%3E"></img> Höhenbeschränkung Leonard-Bernstein-Straße: 2,2m<p>
+</div></div>
 
 <script src="libs/jquery/jquery-3.3.1.min.js"></script>
 
@@ -50,6 +69,7 @@
 
 <script src="libs/leaflet/v1.3.1/leaflet.js"></script>
 <script src="libs/leaflet.easybutton/v2.3.0/easy-button.js"></script>
+<script src="libs/Leaflet.Dialog/v1.0.4/Leaflet.Dialog.js"></script>
 
 <script src="js/leaflet-coceso.js"></script>
 <!--
