--- a/client/index.html
+++ b/client/index.html
@@ -64,6 +64,9 @@
 
 <script src="libs/jquery/jquery-3.3.1.min.js"></script>
 
+<script src="libs/togeojson/v0.16.0/togeojson.js"></script>
+<script src="libs/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js"></script>
+
 <script src="libs/fontawesome/v5.0.6/js/fontawesome.min.js"></script>
 <script src="libs/fontawesome/v5.0.6/js/fa-solid.min.js"></script>
 
