search units (hacky version)

--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,10 @@
         .state-red {
             color: red;
         }
+
+        .highlight {
+            background: yellow;
+        }
     </style>
 </head>
 <body>
