--- a/manager/index.html
+++ b/manager/index.html
@@ -5,7 +5,7 @@
   ~ This software may be modified and distributed under the terms of the MIT license. See the LICENSE file for details.
   -->
 
-<html>
+<html lang="en">
 <head>
   <title>GeoBroker manager - units</title>
 </head>
@@ -33,7 +33,8 @@
       </th>
       <th>Units</th>
       <th>Incidents</th>
-      <th>Actions
+      <th>
+        Actions
         <a href="#" data-bind="click: postAll">Save all</a>
       </th>
     </tr></thead>
@@ -44,7 +45,8 @@
         <input data-bind="value: token"/>
         <a href="#" data-bind="click: random">Random</a>
       </td>
-      <td><select multiple="multiple" data-bind="
+      <td>
+        <select multiple="multiple" data-bind="
         options: $root.configuredUnits,
         optionsText: function (item) {
           return item.name();
@@ -53,8 +55,10 @@
           return item.id;
         },
         selectedOptions: units,
-      "></td>
-      <td><select multiple="multiple" data-bind="
+      "></select>
+      </td>
+      <td>
+        <select multiple="multiple" data-bind="
         options: $root.configuredIncidents,
         optionsText: function (item) {
           return item.type() + ': ' + item.info();
@@ -63,7 +67,9 @@
           return item.id;
         },
         selectedOptions: incidents,
-      "></td>
+      ">
+        </select>
+      </td>
       <td>
         <a href="#" data-bind="click: post">Save</a>
         <a href="#" data-bind="click: $parent.removeUnit">Delete</a>
