--- a/manager/json.html
+++ b/manager/json.html
@@ -5,7 +5,7 @@
   ~ This software may be modified and distributed under the terms of the MIT license. See the LICENSE file for details.
   -->
 
-<html>
+<html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -14,9 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <link rel="stylesheet" href="libs/leaflet/v1.3.1/leaflet.css">
-  <link rel="stylesheet" href="libs/leaflet.easybutton/v2.3.0/easy-button.css">
 
-  <link rel="manifest" href="manifest.json">
   <meta name="msapplication-TileColor" content="#b70e0c">
   <meta name="theme-color" content="#b70e0c">
 
@@ -45,18 +43,9 @@
 </head>
 <body>
 <div id="panel">
-  <textarea
-    id="input"
-    placeholder="paste json here"
-  ></textarea>
-  <button
-    id="load"
-  >Discard output &amp; reload from above</button>
-  <textarea
-    id="output"
-    placeholder="output will be generated here"
-    data-bind="text: json"
-  ></textarea>
+  <textarea id="input" placeholder="Paste JSON with coordinates here" rows="10"></textarea>
+  <button id="load">Discard output &amp; reload from above</button>
+  <textarea id="output" placeholder="output will be generated here" data-bind="text: json" rows="10"></textarea>
 </div>
 <div id="map"></div>
 
