--- a/client/index.html
+++ b/client/index.html
@@ -93,7 +93,7 @@
 <p>
     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='2' stroke='lightgray'/%3E%3C/svg%3E"></img>
     eine Einheit. Wenn du die Maus darüberhältst oder drauf tippst, werden weitere Details eingeblendet:
-    eine grüne Linie führt zur nächsten zugewiesenen Position, eine graue Linie zur letzten bestätigten Position
+    eine grüne oder blaue Linie führt zur nächsten zugewiesenen Position, eine graue Linie zur letzten bestätigten Position
     (beide Linien sind nur dann sichtbar, wenn es die bezeichnete Position gibt und sie sich von der Live-Position der Einheit unterscheidet).
 </p>
 <p>
