help text for #25

--- a/client/index.html
+++ b/client/index.html
@@ -63,6 +63,12 @@
     Grün bedeutet gut; wenn ein Status rot ist, kannst du die Seite neu laden indem du darauf klickst oder tippst.
 </p>
 <p>
+    <i class="fa fa-thumbs-up"></i>/<i class="fa fa-flag"></i>
+    (Leitstellenmodus) aktiviert oder deaktiviert den Filter auf die disponierbaren Einheiten.
+    Der Filtermodus ist unabhängig davon, ob die Einheiten aktuell angezeigt werden, siehe <img src="libs/leaflet/v1.3.1/images/layers.png"></img>.
+    Klicke auf <i class="fa fa-thumbs-up"></i> um nur disponiere Einheiten anzuzeigen.
+</p>
+<p>
     <i class="fa fa-search"></i>
     (Leitstellenmodus) Textsuche nach Einheiten. Suchtext entfernen um die Markierung von den Suchergebnissen zu löschen.
 </p>
