--- a/client/index.html
+++ b/client/index.html
@@ -97,35 +97,35 @@
     ), ist eine unverzügliche Informationsweitergabe erforderlich, z.B. Verzögerung bei der Anfahrt, Lagemeldung bei Eintraffen.
 </p>
 <p>
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='2' stroke='lightgray'/%3E%3C/svg%3E"></img>
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='5' stroke='lightgray'/%3E%3C/svg%3E"></img>
     eine Einheit. Wenn du die Maus darüberhältst oder drauf tippst, werden weitere Details eingeblendet:
     eine grüne oder blaue Linie führt zur nächsten zugewiesenen Position, eine graue Linie zur letzten bestätigten Position
     (beide Linien sind nur dann sichtbar, wenn es die bezeichnete Position gibt und sie sich von der Live-Position der Einheit unterscheidet).
 </p>
 <p>
     Generell siehst du nur Einheiten und Einsätze, die zu dem selben Einsatz alarmiert sind, wie ihr. Führungskräfte sehen alle Einheiten:
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='yellow' stroke-width='2' stroke='lightgray'/%3E%3C/svg%3E"></img>
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='yellow' stroke-width='5' stroke='lightgray'/%3E%3C/svg%3E"></img>
     die eigene Einheit,
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='crimson' stroke-width='2' stroke='lightgray'/%3E%3C/svg%3E"></img>
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='crimson' stroke-width='5' stroke='lightgray'/%3E%3C/svg%3E"></img>
     Notarzt,
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='coral' stroke-width='2' stroke='lightgray'/%3E%3C/svg%3E"></img>
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='coral' stroke-width='5' stroke='lightgray'/%3E%3C/svg%3E"></img>
     RTW,
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='2' stroke='lightgray'/%3E%3C/svg%3E"></img>
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='5' stroke='lightgray'/%3E%3C/svg%3E"></img>
     andere (z.B. SEW),
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='fuchsia' stroke-width='2' stroke='lightgray'/%3E%3C/svg%3E"></img>
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='fuchsia' stroke-width='5' stroke='lightgray'/%3E%3C/svg%3E"></img>
     Führungskraft
 </p>
 <p>
     Die Farben verblassen mit dem Alter der Positionsdaten. Wenn keine oder zu lange keine Positionsdaten vorhanden sind, ist die Einheit offline:
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='gray' stroke-width='2' stroke='lightgray'/%3E%3C/svg%3E"></img>
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='gray' stroke-width='5' stroke='lightgray'/%3E%3C/svg%3E"></img>
 </p>
 <p>
     Der Rand der Einheiten spiegelt deren Status wider:
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='2' stroke='green'/%3E%3C/svg%3E"></img>
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='5' stroke='chartreuse'/%3E%3C/svg%3E"></img>
     kann disponiert werden,
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='2' stroke='blue'/%3E%3C/svg%3E"></img>
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='5' stroke='blue'/%3E%3C/svg%3E"></img>
     Einsatz,
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='2' stroke='lightgray'/%3E%3C/svg%3E"></img>
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='5' stroke='lightgray'/%3E%3C/svg%3E"></img>
     anderer Status
 </p>
 </div></div>
