--- a/client/index.html
+++ b/client/index.html
@@ -66,7 +66,7 @@
     <i class="fa fa-thumbs-up"></i>/<i class="fa fa-flag"></i>
     (Leitstellenmodus) aktiviert oder deaktiviert den Filter auf die disponierbaren Einheiten.
     Der Filtermodus ist unabhängig davon, ob die Einheiten aktuell angezeigt werden, siehe <img src="libs/leaflet/v1.3.1/images/layers.png"></img>.
-    Klicke auf <i class="fa fa-thumbs-up"></i> um nur disponiere Einheiten anzuzeigen.
+    Klicke auf <i class="fa fa-thumbs-up"></i> um nur disponierbare Einheiten anzuzeigen.
 </p>
 <p>
     <i class="fa fa-search"></i>
