--- a/client/index.html
+++ b/client/index.html
@@ -91,13 +91,13 @@
     Aufträge / Einsätze
 </h3>
 <p>
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14'%3E%3Cpath d='M1,1 L7,13 L13,1 z' fill='grey' stroke='white' stroke-width='2'/%3E%3C/svg%3E"/>
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='M1,1 L8,15 L15,1 z' fill='grey' stroke='darkorange' stroke-width='2'/%3E%3C/svg%3E"/>
     ein Auftrag,
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14'%3E%3Cpath d='M1,1 L7,13 L13,1 z' fill='blue' stroke='white' stroke-width='2'/%3E%3C/svg%3E"/>
-    ein Einsatz; wenn der Rahmen rot statt weiß ist (
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14'%3E%3Cpath d='M1,1 L7,13 L13,1 z' fill='grey' stroke='red' stroke-width='2'/%3E%3C/svg%3E"/>
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='M1,1 L8,15 L15,1 z' fill='blue' stroke='darkorange' stroke-width='2'/%3E%3C/svg%3E"/>
+    ein Einsatz; wenn der Rahmen rot statt orange ist (
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='M1,1 L8,15 L15,1 z' fill='grey' stroke='red' stroke-width='2'/%3E%3C/svg%3E"/>
     /
-    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14'%3E%3Cpath d='M1,1 L7,13 L13,1 z' fill='blue' stroke='red' stroke-width='2'/%3E%3C/svg%3E"/>
+    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='M1,1 L8,15 L15,1 z' fill='blue' stroke='red' stroke-width='2'/%3E%3C/svg%3E"/>
     ), ist eine unverzügliche Informationsweitergabe erforderlich, z.B. Verzögerung bei der Anfahrt, Lagemeldung bei Eintreffen.
 </p>
 <h3>
@@ -111,7 +111,8 @@
     (beide Linien sind nur dann sichtbar, wenn es die bezeichnete Position gibt und sie sich von der Live-Position der Einheit unterscheidet).
 </p>
 <p>
-    Generell siehst du nur Einheiten und Einsätze, die zu dem selben Einsatz alarmiert sind, wie ihr. Führungskräfte sehen alle Einheiten:
+    Generell siehst du nur Einheiten und Einsätze, die zu dem selben Einsatz alarmiert sind, wie ihr.
+    Führungskräfte sehen alle Einheiten:
     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='yellow' stroke-width='5' stroke='lightgray'/%3E%3C/svg%3E"/>
     die eigene Einheit,
     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='crimson' stroke-width='5' stroke='lightgray'/%3E%3C/svg%3E"/>
