--- a/client/index.html
+++ b/client/index.html
@@ -82,11 +82,6 @@
     blendet Karteninhalte ein oder aus. Die einzelnen Layer werden eingeblendet, wenn du mit der Maus über diese Funktion fährst oder darauf tippst.
 </p>
 <h2>Karteninhalte</h2>
-<p>
-    <img src="libs/leaflet/v1.3.1/images/marker-icon.png" alt="Map Marker Icon"/>
-    zeigt die am Browser ermittelte, eigene Position an. Der umgebende Kreis beschreibt die Genauigkeit der Positionsbestimmung.
-    Wenn die Datenkommunikation mit dem Server aktiv ist, sollte auch der die eigene Einheit an dieser Stelle angezeigt werden.
-</p>
 <h3>
     Aufträge / Einsätze
 </h3>
@@ -136,6 +131,33 @@
     Einsatz,
     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Ccircle cx='12' cy='12' r='10' fill='white' stroke-width='5' stroke='lightgray'/%3E%3C/svg%3E"/>
     anderer Status
+</p>
+<h3>
+    Position
+</h3>
+<p>
+    <img src="libs/leaflet/v1.3.1/images/marker-icon.png" alt="Map Marker Icon"/>
+    zeigt die am Browser ermittelte, eigene Position an. Der umgebende Kreis beschreibt die Genauigkeit der Positionsbestimmung.
+</p>
+<p>
+    <b>Hinweis:</b> Die Positionsübermittlung ist standardmäßig deaktiviert. Diese Karte ist für die Ansicht, die GeoClient App ist für die Positionsübermittlung.
+    <a href="https://play.google.com/store/apps/details?id=at.wrk.fmd.cocemocl&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1" target="_blank">
+        <img alt="Get it on Google Play" height="64px" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png"/>
+    </a>
+</p>
+<h2>
+    Copyright
+</h2>
+<p>
+    Copyright (c) 2018 Red Cross Vienna and contributors. All rights reserved.
+</p>
+<p>
+    This software may be modified and distributed under the terms of the MIT license. See the
+    <a href="LICENSE" target="_blank">LICENSE</a>
+    file for details.
+</p>
+<p>
+    Google Play and the Google Play logo are trademarks of Google LLC.
 </p>
 </div></div>
 
