stick to German in the help text

--- a/client/index.html
+++ b/client/index.html
@@ -97,7 +97,7 @@
     ), ist eine unverzügliche Informationsweitergabe erforderlich, z.B. Verzögerung bei der Anfahrt, Lagemeldung bei Eintreffen.
 </p>
 <p>
-    Wenn ein Vorfall noch keine Einheit zugewiesen hat, blinkt das Icon auf der Karte:
+    Wenn ein Vorfall noch keine Einheit zugewiesen hat, blinkt das Symbol auf der Karte:
     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='M1,1 L8,15 L15,1 z' fill='blue' stroke='red' stroke-width='2'/%3E%3Canimate attributeName='opacity' values='0;1;1;1;1;1;0;0' dur='1s' repeatCount='indefinite'/%3E%3C/svg%3E"/>
 </p>
 <p>
