--- a/manager/urls.html
+++ b/manager/urls.html
@@ -51,11 +51,11 @@
   <p class="noprint">
     When printing, every unit's info comes on a separate page.
     (This header is not printed.).
-  <p>
-  <p class="noprint">Manage units <a href="index.html">here</a>.<p>
-  <p class="noprint">Manage incidents <a href="incidents.html">here</a>.<p>
-  <p class="noprint">Manage POIs <a href="pois.html">here</a>.<p>
-  <p class="noprint">Edit POIs in Coceso JSON format <a href="json.html">here</a>.<p>
+  </p>
+  <p class="noprint">Manage units <a href="index.html">here</a>.</p>
+  <p class="noprint">Manage incidents <a href="incidents.html">here</a>.</p>
+  <p class="noprint">Manage POIs <a href="pois.html">here</a>.</p>
+  <p class="noprint">Edit POIs in Coceso JSON format <a href="json.html">here</a>.</p>
 
   <script src="libs/jquery/jquery-3.3.1.min.js"></script>
   <script src="libs/qrcodejs/qrcode.js"></script>
