provide form for prefix, name, and label

--- a/manager/urls.html
+++ b/manager/urls.html
@@ -57,6 +57,13 @@
   <p class="noprint">Manage POIs <a href="pois.html">here</a>.</p>
   <p class="noprint">Edit POIs in Coceso JSON format <a href="json.html">here</a>.</p>
 
+  <div class="noprint"><hr/><form>
+    <p>Unit prefix (concern id) - required: <input id="prefix" type="text" name="prefix"/></p>
+    <p>Unit name contains - optional: <input id="name" type="text" name="name"/></p>
+    <p>Label to print - optional: <input id="label" type="text" name="label"/></p>
+    <input type="submit" value="Reload"/>
+  </form><hr/></div>
+
   <script src="libs/jquery/jquery-3.3.1.min.js"></script>
   <script src="libs/qrcodejs/qrcode.js"></script>
 
