replaced popup with DOM
resolves #41

--- a/manager/urls.html
+++ b/manager/urls.html
@@ -61,7 +61,11 @@
     <p>Unit prefix (concern id) - required: <input id="prefix" type="text" name="prefix"/></p>
     <p>Unit name contains - optional: <input id="name" type="text" name="name"/></p>
     <p>Label to print - optional: <input id="label" type="text" name="label"/></p>
-    <input type="submit" value="Reload"/>
+    <p>
+      <input type="submit" value="Reload"/>
+      <span id="warning" style="color: red"></span>
+      <span id="info"></span>
+    </p>
   </form><hr/></div>
 
   <script src="libs/jquery/jquery-3.3.1.min.js"></script>
