Add checkbox to generate center mode URLs

--- a/manager/urls.html
+++ b/manager/urls.html
@@ -58,9 +58,10 @@
   <p class="noprint">Edit POIs in Coceso JSON format <a href="json.html">here</a>.</p>
 
   <div class="noprint"><hr/><form>
-    <p>Unit prefix (concern id) - required: <input id="prefix" type="text" name="prefix"/></p>
+    <p>Unit prefix (concern id) - <strong>required</strong>: <input id="prefix" type="text" name="prefix"/></p>
     <p>Unit name contains - optional: <input id="name" type="text" name="name"/></p>
     <p>Label to print - optional: <input id="label" type="text" name="label"/></p>
+    <p>Generate centerMode URLs: <input id="generateCenterMode" type="checkbox" name="generateCenterMode"/></p>
     <p>
       <input type="submit" value="Reload"/>
       <span id="warning" style="color: red"></span>
