Leaflet.markercluster for #37

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="libs/leaflet/v1.3.1/leaflet.css"/>
     <link rel="stylesheet" href="libs/leaflet.easybutton/v2.3.0/easy-button.css"/>
     <link rel="stylesheet" href="libs/Leaflet.Dialog/v1.0.4/Leaflet.Dialog.css"/>
+    <link rel="stylesheet" href="libs/Leaflet.markercluster/v1.4.1/MarkerCluster.css"/>
+    <link rel="stylesheet" href="libs/Leaflet.markercluster/v1.4.1/MarkerCluster.Default.css"/>
 
     <link rel="manifest" href="manifest.json"/>
     <meta name="msapplication-TileColor" content="#b70e0c"/>
@@ -181,6 +183,7 @@
 <script src="libs/leaflet/v1.3.1/leaflet.js"></script>
 <script src="libs/leaflet.easybutton/v2.3.0/easy-button.js"></script>
 <script src="libs/Leaflet.Dialog/v1.0.4/Leaflet.Dialog.js"></script>
+<script src="libs/Leaflet.markercluster/v1.4.1/leaflet.markercluster.js"></script>
 
 <script src="js/leaflet-coceso.js"></script>
 <!--
