layer support group, still to be fixed
this is not the solution, but backing up the status-quo

--- a/client/index.html
+++ b/client/index.html
@@ -183,7 +183,9 @@
 <script src="libs/leaflet/v1.3.1/leaflet.js"></script>
 <script src="libs/leaflet.easybutton/v2.3.0/easy-button.js"></script>
 <script src="libs/Leaflet.Dialog/v1.0.4/Leaflet.Dialog.js"></script>
+
 <script src="libs/Leaflet.markercluster/v1.4.1/leaflet.markercluster.js"></script>
+<script src="libs/Leaflet.MarkerCluster.LayerSupport/v2.0.1/leaflet.markercluster.layersupport.js"></script>
 
 <script src="js/leaflet-coceso.js"></script>
 <!--
