--- a/manager/pois.html
+++ b/manager/pois.html
@@ -10,52 +10,62 @@
   <title>GeoBroker manager - POIs</title>
 </head>
 <body>
-  <p>The main design goals for this module are simple code and less effort - data errors are <em>not</em> handled in general!</p>
+<p>The main design goals for this module are simple code and less effort - data errors are <em>not</em> handled in
+  general!</p>
 
-  <p>Manage units <a href="index.html">here</a>.<p>
-  <p>Manage incidents <a href="incidents.html">here</a>.<p>
-  <p>Edit POIs in Coceso JSON format <a href="json.html">here</a>.<p>
-  <p>Print unit URLs <a href="urls.html">here</a>.<p>
+<p>Manage units <a href="index.html">here</a>.
+<p>
+<p>Manage incidents <a href="incidents.html">here</a>.
+<p>
+<p>Edit POIs in Coceso JSON format <a href="json.html">here</a>.
+<p>
+<p>Print unit URLs <a href="urls.html">here</a>.
+<p>
 
-  <h1>POIs</h1>
-  <form data-bind="submit: addPoi">
-    <input data-bind="value: newPoiType" />
-    <textarea
+<h1>POIs</h1>
+<form data-bind="submit: addPoi">
+  <input data-bind="value: newPoiType"/>
+  <textarea
       placeholder="one POI info per line"
       data-bind="value: newPoiInfo"
-    ></textarea><button type="submit">Add</button>
-  </form>
-  <table>
-    <thead><tr>
-      <th>Id</th>
-      <th>Type</th>
-      <th>Info</th>
-      <th>Latitude/Longitude</th>
-      <th>Actions
-        <a href="#" data-bind="click: postAll">Save all</a>
-      </th>
-    </tr></thead>
-    <tbody data-bind="foreach: pointsOfInterest"><tr>
-      <td data-bind="text: id"></td>
-      <td><input data-bind="value: type" /></td>
-      <td><input data-bind="value: info" /></td>
-      <td data-bind="with: location">
-        <!-- TODO implement as map -->
-        <input data-bind="value: latitude" />
-        <input data-bind="value: longitude" />
-      </td>
-      <td>
-        <a href="#" data-bind="click: post">Save</a>
-        <a href="#" data-bind="click: $parent.removePoi">Delete</a>
-      </td>
-    </tr></tbody>
-  </table>
+  ></textarea>
+  <button type="submit">Add</button>
+</form>
+<table>
+  <thead>
+  <tr>
+    <th>Id</th>
+    <th>Type</th>
+    <th>Info</th>
+    <th>Latitude/Longitude</th>
+    <th>Actions
+      <a href="#" data-bind="click: postAll">Save all</a>
+    </th>
+  </tr>
+  </thead>
+  <tbody data-bind="foreach: pointsOfInterest">
+  <tr>
+    <td data-bind="text: id"></td>
+    <td><input data-bind="value: type"/></td>
+    <td><input data-bind="value: info"/></td>
+    <td data-bind="with: location">
+      <!-- TODO implement as map -->
+      <input data-bind="value: latitude"/>
+      <input data-bind="value: longitude"/>
+    </td>
+    <td>
+      <a href="#" data-bind="click: post">Save</a>
+      <a href="#" data-bind="click: $parent.removePoi">Delete</a>
+    </td>
+  </tr>
+  </tbody>
+</table>
 
-  <script src="libs/jquery/jquery-3.3.1.min.js"></script>
-  <script src="libs/knockout/v3.4.2/knockout.js"></script>
-  <script src="libs/knockout/v3.4.2/knockout.mapping-2.4.1.js"></script>
+<script src="libs/jquery/jquery-3.7.1.min.js"></script>
+<script src="libs/knockout/v3.4.2/knockout.js"></script>
+<script src="libs/knockout/v3.4.2/knockout.mapping-2.4.1.js"></script>
 
-  <script src="config.js"></script>
-  <script src="js/pois.js"></script>
+<script src="config.js"></script>
+<script src="js/pois.js"></script>
 </body>
 </html>
