--- a/manager/urls.html
+++ b/manager/urls.html
@@ -9,55 +9,57 @@
 <head>
   <title>GeoBroker manager - URLs</title>
   <style>
-    .qr {
-      margin: 1cm;
-      display: block;
-      float: right;
-    }
-
-    .link-paragraph {
-      width: 100%;
-    }
-
-    .line-wrap {
-      white-space: pre-wrap; /* css-3 */
-      white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
-      word-wrap: break-word; /* Internet Explorer 5.5+ */
-    }
-
-    @media print {
-      .noprint {
-        display: none;
+      .qr {
+          margin: 1cm;
+          display: block;
+          float: right;
       }
 
-      .unit {
-        margin: 0 1.5cm; /* cannot insert vertical space after page-break*/
-        page-break-after: always;
+      .link-paragraph {
+          width: 100%;
       }
 
-      .unit::before {
-        content: " ";
-        height: 1.5cm;
-        display: block;
+      .line-wrap {
+          white-space: pre-wrap; /* css-3 */
+          white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+          word-wrap: break-word; /* Internet Explorer 5.5+ */
       }
 
-      @page {
-        margin: 0;
+      @media print {
+          .noprint {
+              display: none;
+          }
+
+          .unit {
+              margin: 0 1.5cm; /* cannot insert vertical space after page-break*/
+              page-break-after: always;
+          }
+
+          .unit::before {
+              content: " ";
+              height: 1.5cm;
+              display: block;
+          }
+
+          @page {
+              margin: 0;
+          }
       }
-    }
   </style>
 </head>
 <body>
-  <p class="noprint">
-    When printing, every unit's info comes on a separate page.
-    (This header is not printed.).
-  </p>
-  <p class="noprint">Manage units <a href="index.html">here</a>.</p>
-  <p class="noprint">Manage incidents <a href="incidents.html">here</a>.</p>
-  <p class="noprint">Manage POIs <a href="pois.html">here</a>.</p>
-  <p class="noprint">Edit POIs in Coceso JSON format <a href="json.html">here</a>.</p>
+<p class="noprint">
+  When printing, every unit's info comes on a separate page.
+  (This header is not printed.).
+</p>
+<p class="noprint">Manage units <a href="index.html">here</a>.</p>
+<p class="noprint">Manage incidents <a href="incidents.html">here</a>.</p>
+<p class="noprint">Manage POIs <a href="pois.html">here</a>.</p>
+<p class="noprint">Edit POIs in Coceso JSON format <a href="json.html">here</a>.</p>
 
-  <div class="noprint"><hr/><form>
+<div class="noprint">
+  <hr/>
+  <form>
     <p>Unit prefix (concern id) - <strong>required</strong>: <input id="prefix" type="text" name="prefix"/></p>
     <p>Unit name contains - optional: <input id="name" type="text" name="name"/></p>
     <p>Label to print - optional: <input id="label" type="text" name="label"/></p>
@@ -67,12 +69,14 @@
       <span id="warning" style="color: red"></span>
       <span id="info"></span>
     </p>
-  </form><hr/></div>
+  </form>
+  <hr/>
+</div>
 
-  <script src="libs/jquery/jquery-3.3.1.min.js"></script>
-  <script src="libs/qrcodejs/qrcode.js"></script>
+<script src="libs/jquery/jquery-3.7.1.min.js"></script>
+<script src="libs/qrcodejs/qrcode.js"></script>
 
-  <script src="config.js"></script>
-  <script src="js/urls.js"></script>
+<script src="config.js"></script>
+<script src="js/urls.js"></script>
 </body>
 </html>
